--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
-    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.14.0"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
