--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.14.0"
+    "react-router-dom": "^6.14.0",
+    "react-spotify-web-playback": "^0.14.0",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
